modified to work with multiple types of elbow plot

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,9 +251,9 @@
     "\n",
     "Instead, our best method is to plot the variance ratios, and find the **_elbow_** in the plot. Here's an example of the type of plot we'll generate:\n",
     "\n",
-    "<img src='images/elbow-method.png' width = \"500\">\n",
+    "<img src='images/wcss_elbow1.png' width = \"500\">\n",
     "\n",
-    "In this example, the elbow is at K=3. This provides the biggest change to the CH score, and every one after that provides only a minimal improvement. \n",
+    "In this example, the elbow is at K=5. This provides the biggest change to the within cluster sum of squares score, and every one after that provides only a minimal improvement. Remember, the elbow plot will have a positive or negative slope depending on the metric used for clustering evaluation. Time to try it out on our data to determine the optimal number of clusters!\n",
     "\n",
     "In the cell below:\n",
     "\n",
@@ -300,7 +300,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**_Question:_**  Interpret the elbow plot we just created. Where is the \"elbow\" in this plot? According to this plot, how many clusters do you think actually exist in the dataset we created?\n",
+    "That's one metric for evaluating the results, let's take a look at another metric, inertia also known as Within Cluster Sum of Squares (WCSS). In the cell below:\n",
+    "\n",
+    "* Create an empty list called `wcss_score`\n",
+    "* Loop through the models we stored in `k_list`.\n",
+    "    * For each model, get the labels from the `.labels_` attribute.\n",
+    "    * Obtain the `inertia_` attribute from each clustering model and append this value to wcss_score.\n",
+    "\n",
+    "After creating this, run the cell below it to create a graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wcss_score = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([3, 4, 5, 6, 7], wcss_score)\n",
+    "plt.xticks([3,4,5,6,7])\n",
+    "plt.title(\"Within Cluster Sum of Squares\")\n",
+    "plt.ylabel(\"WCSS\")\n",
+    "plt.xlabel(\"K=\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**_Question:_**  Interpret the elbow plots we just created. Where are the \"elbows\" in these plots? According to these plots, how many clusters do you think actually exist in the dataset we created?\n",
     "\n",
     "Write your answer below this line:\n",
     "_______________________________________________________________________________\n",
@@ -351,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
