singluar to plural after introducing the new plots

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
     "\n",
     "<img src='./images/wcss_elbow1.png' width = \"500\">\n",
     "\n",
-    "In this example, the elbow is at K=5. This provides the biggest change to the distortion score, and every one after that provides only a minimal improvement. Remember, the elbow plot will have a positive or negative slope depending on the metric used for clustering evaluation. Time to try it out on our data to determine the optimal number of clusters!\n",
+    "In this example, the elbow is at K=5. This provides the biggest change to the Within Cluster Sum of Squares, and every one after that provides only a minimal improvement. Remember, the elbow plot will have a positive or negative slope depending on the metric used for clustering evaluation. Time to try it out on our data to determine the optimal number of clusters!\n",
     "\n",
     "In the cell below:\n",
     "\n",
@@ -419,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**_Question:_**  Interpret the elbow plots we just created. Where is the \"elbow\" in these plot? According to this plot, how many clusters do you think actually exist in the dataset we created?\n",
+    "**_Question:_**  Interpret the elbow plots we just created. Where are the \"elbow\" in these plots? According to these plot, how many clusters do you think actually exist in the dataset we created?\n",
     "\n",
     "Write your answer below this line:\n",
     "_______________________________________________________________________________\n",
