create curriculum branch

--- a/index.ipynb
+++ b/index.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "* Demonstrate an understanding of how the K-means Clustering algorithm works\n",
     "* Perform K-means Clustering with scikit-learn and interpret results\n",
-    "* Use metrics such as Calinski Harabasz Scores (Variance Ratios) to determine the optimal number of clusters\n",
+    "* Use metrics such as Calinski Harabasz Scores (variance ratios) to determine the optimal number of clusters\n",
     "\n",
     "\n",
     "## Understanding the K-means Algorithm \n",
@@ -668,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
