Notebook updated by fis-canvas image script

--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
     "\n",
     "Instead, our best method is to plot the variance ratios and find the **_elbow_** in the plot. Here's an example of the type of plot you'll generate:\n",
     "\n",
-    "<img src='images/wcss_elbow1.png' width = \"500\">\n",
+    "<img src='https://curriculum-content.s3.amazonaws.com/data-science/images/wcss_elbow1.png' width = \"500\">\n",
     "\n",
     "In this example, the elbow is at $k=5$. This provides the biggest change to the within-cluster sum of squares score, and every one after that provides only a minimal improvement. Remember, the elbow plot will have a positive or negative slope depending on the metric used for cluster evaluation. Time to try it out on our data to determine the optimal number of clusters!\n",
     "\n",
